test/scc/expr/semantic-errors/104.t
void foo(int a)
{
    
}

void test()
{
    foo();
}